Replaced several svgs with double-sized PNGs to avoid rendering issues on mobile browsers which have poor SVG-with-transparency support.

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -13,6 +13,10 @@
     background: url("/public/images/bubbles-exclamation.svg") bottom right / 30vw no-repeat, var(--navy);
 }
 
+section#ge-hero img {
+    width: 276px;
+}
+
 @media (min-width: 1200px) {
     .engca-hero {
         background-image: unset;
