--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -4,12 +4,15 @@
 
 #hero {
   color: var(--off-white);
-  background: url("/public/images/hero-bubbles-cropped.svg") bottom right / 30vw no-repeat, var(--navy);
+  background: url("/public/images/hero-bubbles-cropped.png") bottom right / 30vw no-repeat, var(--navy);
 }
 
+section#hero img {
+  max-width: 356px;
+}
 #about {
   color: #444;
-  background: url("/public/images/about-bubbles-cropped.svg") bottom right / 25vw no-repeat, var(--off-white);
+  background: url("/public/images/about-bubbles-cropped.png") bottom right / 25vw no-repeat, var(--off-white);
 }
 
 @media (min-width: 1200px) {
